@@ -10,6 +10,7 @@
     * Add Mobloquer, protect internet privacy.
     * Add JabRef, bibliography reference manager.
     * Fix depencency error (if any) before installing.
+    * Fix issue 692, broken link error.
 
 2010-07-21 Homer Xing <homer.xing@gmail.com>
 
